--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
   "configurations": [
     {
       "type": "java",
+      "name": "HelloWithName",
+      "request": "launch",
+      "mainClass": "main.java.hello.HelloWithName",
+      "projectName": "2024_CodingLessons"
+    },
+    {
+      "type": "java",
+      "name": "HelloWorld",
+      "request": "launch",
+      "mainClass": "main.java.hello.HelloWorld",
+      "projectName": "2024_CodingLessons"
+    },
+    {
+      "type": "java",
       "name": "Launch HelloWithName",
       "request": "launch",
       "mainClass": "main.java.hello.HelloWithName",
